--- a/LocoSwap.Language/Resources/Resources.nl.resx
+++ b/LocoSwap.Language/Resources/Resources.nl.resx
@@ -118,225 +118,291 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="add_to_rules" xml:space="preserve">
-    <value>Add to rules</value>
+    <value>Toevoegen aan regels</value>
   </data>
   <data name="all_vehicles" xml:space="preserve">
-    <value>List All Vehicles</value>
+    <value>Maak een lijst van alle voertuigen</value>
+  </data>
+  <data name="and_add_as_rule" xml:space="preserve">
+    <value>en voeg als regel toe</value>
   </data>
   <data name="apply" xml:space="preserve">
-    <value>Apply</value>
+    <value>Toepassen</value>
+  </data>
+  <data name="apply_all_rules" xml:space="preserve">
+    <value>Alle regels toepassen</value>
+  </data>
+  <data name="apply_replacement_rules" xml:space="preserve">
+    <value>Alle regels toepassen</value>
+  </data>
+  <data name="author" xml:space="preserve">
+    <value>Auteur</value>
   </data>
   <data name="browse" xml:space="preserve">
-    <value>Browse ...</value>
+    <value>Bladeren ...</value>
   </data>
   <data name="cancel" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Annuleren</value>
   </data>
   <data name="change_number" xml:space="preserve">
-    <value>Change number</value>
+    <value>Verander nummer</value>
   </data>
   <data name="clear_vehicles" xml:space="preserve">
-    <value>Clear</value>
+    <value>Wissen</value>
   </data>
   <data name="close" xml:space="preserve">
-    <value>Close</value>
+    <value>Sluiten</value>
+  </data>
+  <data name="completion" xml:space="preserve">
+    <value>Voltooiing</value>
+  </data>
+  <data name="completion_completedfailed" xml:space="preserve">
+    <value>Mislukt</value>
+  </data>
+  <data name="completion_completedsuccessfully" xml:space="preserve">
+    <value>Succesvol
+</value>
+  </data>
+  <data name="completion_unknown" xml:space="preserve">
+    <value>?</value>
   </data>
   <data name="consists_in_scenario" xml:space="preserve">
-    <value>Consists in scenario</value>
+    <value>Bestaat in scenario</value>
   </data>
   <data name="delete" xml:space="preserve">
-    <value>Delete</value>
+    <value>Verwijderen</value>
+  </data>
+  <data name="delete_scenarios" xml:space="preserve">
+    <value>Scenario's verwijderen</value>
+  </data>
+  <data name="duration" xml:space="preserve">
+    <value>Duur</value>
   </data>
   <data name="edit_scenario" xml:space="preserve">
-    <value>Edit scenario</value>
+    <value>Bewerk scenario</value>
   </data>
   <data name="edit_scenario_title" xml:space="preserve">
-    <value>Edit scenario: {0}</value>
+    <value>Bewerk scenario: {0}</value>
   </data>
   <data name="enter_number_manually" xml:space="preserve">
-    <value>Or enter vehicle number manually:</value>
+    <value>Of voer het voertuignummer handmatig in:</value>
+  </data>
+  <data name="error_cannot_read_scenario" xml:space="preserve">
+    <value>Fout: scenariodetails kunnen niet worden gelezen (misvormde XML)</value>
+  </data>
+  <data name="filter" xml:space="preserve">
+    <value>Filter</value>
   </data>
   <data name="flip" xml:space="preserve">
-    <value>Flip vehicle</value>
+    <value>Voertuig omdraaien</value>
   </data>
   <data name="flipped" xml:space="preserve">
-    <value>Flipped?</value>
+    <value>Omgedraaid?</value>
+  </data>
+  <data name="game_save_date" xml:space="preserve">
+    <value>Bewaar datum</value>
+  </data>
+  <data name="hide_played_scenarios" xml:space="preserve">
+    <value>Verberg gespeelde scenario's</value>
   </data>
   <data name="id" xml:space="preserve">
     <value>ID</value>
   </data>
   <data name="insert_after" xml:space="preserve">
-    <value>Insert v</value>
+    <value>Invoegen v</value>
   </data>
   <data name="insert_before" xml:space="preserve">
-    <value>Insert ^</value>
+    <value>Invoegen ^</value>
+  </data>
+  <data name="involved_in_consist_operation" xml:space="preserve">
+    <value>Dit voertuig is betrokken bij instructies voor koppelen/ontkoppelen. LocoSwap behoudt zijn nummer.</value>
   </data>
   <data name="language" xml:space="preserve">
-    <value>Language</value>
+    <value>Taal</value>
+  </data>
+  <data name="loading" xml:space="preserve">
+    <value>Bezig met laden...</value>
   </data>
   <data name="look_up_vehicles" xml:space="preserve">
-    <value>Look up vehicles</value>
+    <value>Zoek voertuigen op</value>
   </data>
   <data name="msg_cannot_load_vehicle" xml:space="preserve">
-    <value>Could not load vehicle "{0}"!</value>
+    <value>Kan voertuig "{0}" niet laden!</value>
   </data>
   <data name="msg_consist_empty" xml:space="preserve">
-    <value>The consist must contain at least one vehicle after the removal!</value>
+    <value>De samenstelling moet na de verwijdering minimaal één voertuig bevatten!</value>
   </data>
   <data name="msg_error" xml:space="preserve">
-    <value>Error</value>
+    <value>Fout</value>
   </data>
   <data name="msg_first_time" xml:space="preserve">
-    <value>First time run: Please select Train Simulator directory.</value>
+    <value>Eerste keer draaien: Selecteer de map Train Simulator.</value>
   </data>
   <data name="msg_flip_completed" xml:space="preserve">
-    <value>The selected vehicle(s) are successfully flipped.</value>
+    <value>De geselecteerde voertuig(en)
+zijn succesvol omgedraaid.</value>
   </data>
   <data name="msg_message" xml:space="preserve">
-    <value>Message</value>
+    <value>Bericht</value>
   </data>
   <data name="msg_no_directory_selected" xml:space="preserve">
-    <value>Please select a directory first.</value>
+    <value>Selecteer eerst een map.</value>
   </data>
   <data name="msg_no_vehicle_selected" xml:space="preserve">
-    <value>Please select vehicles first.</value>
+    <value>Selecteer eerst voertuigen.</value>
   </data>
   <data name="msg_scenario_saved" xml:space="preserve">
-    <value>Scenario files successfully saved.</value>
+    <value>Scenariobestanden
+zijn succesvol opgeslagen.</value>
   </data>
   <data name="msg_swap_completed" xml:space="preserve">
-    <value>Swap successfully completed.</value>
+    <value>Wissel succesvol afgerond.</value>
   </data>
   <data name="msg_ts_path_invalid" xml:space="preserve">
-    <value>Selected path is invalid! (Check if it contains RailWorks.exe)</value>
+    <value>Geselecteerd pad is ongeldig! (Controleer of het RailWorks.exe bevat)</value>
   </data>
   <data name="msg_ts_path_required" xml:space="preserve">
-    <value>A valid TS path is required to run this application. The application will now exit.</value>
+    <value>Er is een geldig TS-pad vereist om deze toepassing uit te voeren. De toepassing wordt nu afgesloten.</value>
   </data>
   <data name="msg_vehicles_added_to_rules" xml:space="preserve">
-    <value>Vehicles successfully added to replacement rules.</value>
+    <value>Voertuigen succesvol toegevoegd aan vervangingsregels.</value>
   </data>
   <data name="msg_vehicle_already_in_rules" xml:space="preserve">
-    <value>Vehicle "{0}" is already in replacement rules! Update this rule?</value>
+    <value>Voertuig "{0}" is al in vervangende regels! Deze regel updaten?</value>
   </data>
   <data name="msg_write_access_denied" xml:space="preserve">
-    <value>Access denied while trying to write to scenario files. Please check that Scenario.bin and ScenarioProperties.xml are not write protected.</value>
+    <value>Toegang geweigerd tijdens poging om naar scenariobestanden te schrijven. Controleer of Scenario.bin en ScenarioProperties.xml niet tegen schrijven zijn beveiligd.</value>
   </data>
   <data name="name" xml:space="preserve">
-    <value>Name</value>
+    <value>Naam</value>
   </data>
   <data name="new_vehicle_selected" xml:space="preserve">
-    <value>New vehicle selected</value>
+    <value>Nieuw voertuig geselecteerd</value>
   </data>
   <data name="number" xml:space="preserve">
-    <value>Number</value>
+    <value>Nummer</value>
   </data>
   <data name="numbering_list" xml:space="preserve">
-    <value>Numbering list</value>
+    <value>Nummering lijst</value>
   </data>
   <data name="numbering_list_not_found" xml:space="preserve">
-    <value>Numbering list not found; please enter number manually.</value>
+    <value>Nummerlijst niet gevonden; voer het nummer handmatig in.</value>
   </data>
   <data name="ok" xml:space="preserve">
     <value>OK</value>
   </data>
+  <data name="only_on_missing_stock" xml:space="preserve">
+    <value>alleen op ontbrekend materieel (geel)</value>
+  </data>
+  <data name="on_all_stock" xml:space="preserve">
+    <value>op alle materieel</value>
+  </data>
   <data name="open_scenario_directory" xml:space="preserve">
-    <value>Open scenario directory</value>
-  </data>
-  <data name="clear_ts_cache" xml:space="preserve">
-    <value>Clear cache</value>
-  </data>
-  <data name="open_map_inspector" xml:space="preserve">
-    <value>Map Inspector</value>
-  </data>
-  <data name="list_all_vehicles" xml:space="preserve">
-    <value>List all vehicles</value>
-  </data>
-  <data name="removed_cache" xml:space="preserve">
-    <value>Cache has been deleted</value>
-  </data>
-  <data name="delete_cache_task_not_finished" xml:space="preserve">
-    <value>Previous task not finished</value>
+    <value>Open scenariomap</value>
   </data>
   <data name="path" xml:space="preserve">
-    <value>Path</value>
+    <value>Pad</value>
+  </data>
+  <data name="player_train_name" xml:space="preserve">
+    <value>Speler trein</value>
   </data>
   <data name="reading_scenario_files" xml:space="preserve">
-    <value>Reading scenario files...</value>
+    <value>Scenariobestanden lezen...</value>
   </data>
   <data name="remove" xml:space="preserve">
-    <value>Remove</value>
+    <value>Verwijderen</value>
   </data>
   <data name="replace" xml:space="preserve">
-    <value>Replace</value>
+    <value>Vervangen</value>
   </data>
   <data name="replacement_rules" xml:space="preserve">
-    <value>Replacement rules</value>
+    <value>Vervangende regels</value>
+  </data>
+  <data name="replacement_rules_management" xml:space="preserve">
+    <value>Beheer vervangende regels</value>
   </data>
   <data name="replace_identical" xml:space="preserve">
-    <value>Replace identical</value>
+    <value>Vervang identiek</value>
   </data>
   <data name="replace_with" xml:space="preserve">
-    <value>Replace with</value>
+    <value>Vervangen door</value>
   </data>
   <data name="route" xml:space="preserve">
     <value>Route</value>
   </data>
+  <data name="rule" xml:space="preserve">
+    <value>Regel</value>
+  </data>
   <data name="rule_find" xml:space="preserve">
-    <value>Search for...</value>
+    <value>Zoeken naar...</value>
   </data>
   <data name="rule_replace" xml:space="preserve">
-    <value>Replace with...</value>
+    <value>Vervangen door...</value>
   </data>
   <data name="save" xml:space="preserve">
-    <value>Save</value>
+    <value>Opslaan</value>
   </data>
   <data name="saving_scenario" xml:space="preserve">
-    <value>Saving scenario files...</value>
+    <value>Scenariobestanden opslaan...</value>
   </data>
   <data name="scanning_ap_files" xml:space="preserve">
-    <value>Scanning in .ap files...</value>
+    <value>Scannen in .ap-bestanden...</value>
   </data>
   <data name="scanning_bin_files" xml:space="preserve">
-    <value>Scanning for vehicle .bin files...</value>
+    <value>Scannen naar voertuig .bin-bestanden...</value>
   </data>
   <data name="scenario" xml:space="preserve">
     <value>Scenario</value>
   </data>
+  <data name="scenario_delete_prompt_message" xml:space="preserve">
+    <value>Weet u zeker dat u de geselecteerde scenario('s) wilt verwijderen?</value>
+  </data>
+  <data name="scenario_delete_prompt_title" xml:space="preserve">
+    <value>Scenario's verwijderen</value>
+  </data>
+  <data name="scenario_in_ap" xml:space="preserve">
+    <value>*** Dit scenario is opgenomen in een .ap-bestand. LocoSwap zal het automatisch uitpakken bij het opslaan. ***</value>
+  </data>
+  <data name="scenario_name_suffix" xml:space="preserve">
+    <value>Achtervoegsel scenarionaam</value>
+  </data>
+  <data name="season" xml:space="preserve">
+    <value>Seizoen</value>
+  </data>
+  <data name="season_autumn" xml:space="preserve">
+    <value>Herfst</value>
+  </data>
+  <data name="season_spring" xml:space="preserve">
+    <value>Lente</value>
+  </data>
+  <data name="season_summer" xml:space="preserve">
+    <value>Zomer</value>
+  </data>
+  <data name="season_winter" xml:space="preserve">
+    <value>Winter</value>
+  </data>
   <data name="select_ts_path" xml:space="preserve">
-    <value>Select Train Simulator Path</value>
+    <value>Selecteer treinsimulatorpad</value>
   </data>
   <data name="settings" xml:space="preserve">
-    <value>Settings</value>
+    <value>Instellingen</value>
+  </data>
+  <data name="start_time" xml:space="preserve">
+    <value>Starttijd</value>
   </data>
   <data name="ts_directory" xml:space="preserve">
-    <value>Train Simulator directory</value>
+    <value>Train Simulator-map</value>
   </data>
   <data name="use_system_language" xml:space="preserve">
-    <value>Use system language</value>
+    <value>Gebruik systeemtaal</value>
   </data>
   <data name="vehicles_in_selected_consist" xml:space="preserve">
-    <value>Vehicles in selected consist</value>
+    <value>Voertuigen in geselecteerde samenstelling</value>
   </data>
   <data name="vehicle_selected" xml:space="preserve">
-    <value>Selected vehicle</value>
+    <value>Geselecteerd voertuig</value>
   </data>
   <data name="vehicle_to_be_replaced" xml:space="preserve">
-    <value>Vehicle to be replaced</value>
-  </data>
-  <data name="do_not_remove_vehicles" xml:space="preserve">
-    <value>Keep vehicles</value>
-  </data>
-  <data name="search" xml:space="preserve">
-    <value>Search</value>
-  </data>
-  <data name="tracks_record_set_total" xml:space="preserve">
-    <value>Tracks record set total</value>
-  </data>
-  <data name="track_tiles_total" xml:space="preserve">
-    <value>Total track tiles</value>
-  </data>
-  <data name="apply_replacement_rules" xml:space="preserve">
-    <value>Apply replacement rules</value>
+    <value>Voertuig om te vervangen</value>
   </data>
 </root>
